namespaces/live.cloud-platform.service.justice.gov.uk/laa-data-provider-data-dev/00-namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: "laa-data-provider-data-dev"
  labels:
    cloud-platform.justice.gov.uk/is-production: "false"
    cloud-platform.justice.gov.uk/environment-name: "development"
    pod-security.kubernetes.io/enforce: restricted
  annotations:
    cloud-platform.justice.gov.uk/business-unit: "LAA"
    cloud-platform.justice.gov.uk/slack-channel: "laa-data-stewardship-enterprise"
    cloud-platform.justice.gov.uk/application: "Provider data"
    cloud-platform.justice.gov.uk/owner: "Data Stewardship (CSE): laa-dstew-enterprise@justice.gov.uk"
    cloud-platform.justice.gov.uk/source-code: "https://github.com/ministryofjustice/laa-data-provider-data"
    cloud-platform.justice.gov.uk/team-name: "laa-data-stewardship-cse-team"
    cloud-platform.justice.gov.uk/review-after: ""
